# digital-link-demo

./: .gitignore  Cargo.toml  README.md  compose.yaml  fetch-dlrs.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
catalog/: :w  README.md  package.json
catalog/src/: App.tsx  index.css
check-digit-calc/: Cargo.toml
check-digit-calc/src/: lib.rs  main.rs
client/: README.md  index.html  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src-tauri/: tauri.conf.json
data-collector/: Cargo.toml  categories.txt
data-collector/src/: collector.rs  lib.rs  main.rs
data-collector/src/models/: catalog.rs  mod.rs  product.rs
data-generator/: Cargo.toml
data-generator/src/: lib.rs  main.rs
data-generator/src/model/: language.rs  link_type.rs  mime.rs  mod.rs  resource.rs
database/init/: import.sh
resolver/: README.md  package.json
resolver/prisma/: schema.prisma
resolver/public/: resolver-description.json
resolver/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  redirect.type.ts
resource-provider/: Cargo.toml
resource-provider/src/: controllers.rs  main.rs  static.rs  views.rs
resource-provider/templates/: 404.stpl  product.stpl
