[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
check-digit-calc = { version = "0.1.0", path = "../check-digit-calc" }
indicatif = { version = "0.17.6", features = ["rayon"] }
nipper = "0.1.9"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ureq = { version = "2.7.1", features = ["json"] }
url = "2.4.1"
voyager = "0.2.1"
