[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
fake = { version = "2.8.0", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
strum = { version = "0.25.0", features = ["derive"] }
